ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
/* README R5: boundary-call counts, counted in the CORE (zero unless the core is a counting build). */
struct AkCounters {
  uint64_t forward;
  uint64_t reverse;
  uint64_t transcode;
  uint64_t prefix_moves;
  uint64_t prefix_bytes;
  uint64_t grows;
};
typedef struct AkCounters AkCounters;
/* ---- section 3: the lifecycle (plan.lifecycle, R-G7) ----------------------------
 * Every binding rendered from this plan calls `ak_init` before its first codec or RPC
 * call and treats AK_OK and AK_ALREADY_INITIALIZED as success. A core built with `init-guard`
 * refuses every entry point with AK_ERR_UNINITIALIZED until it has. The prototype
 * is among the fixed entry points below. */

/* Encode group for `TaskOptionsOptionsEntry`. */
struct ak_efix_TaskOptionsOptionsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`. */
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
/* Encode group for `TaskSummary`. */
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
ak_dec_ctx *ak_dec_ctx_new_ListResultsResponse(void);
ak_dec_ctx *ak_dec_ctx_new_ListTasksDetailedResponse(void);
ak_dec_ctx *ak_dec_ctx_new_ListTaskSummaryResponse(void);
ak_dec_ctx *ak_dec_ctx_new_ListProbeResponse(void);
ak_dec_ctx *ak_dec_ctx_new_ListMetricsResponse(void);
ak_dec_ctx *ak_dec_ctx_new_UploadResultDataMessage(void);
ak_dec_ctx *ak_dec_ctx_new_DualResponse(void);
int32_t ak_elemu_TaskDetailed(ak_enc_ctx *ctx, const struct ak_efix_TaskDetailed *elems, int32_t n, int64_t tok0);
int32_t ak_elem_TaskOptionsOptionsEntry(ak_enc_ctx *ctx, const struct ak_efix_TaskOptionsOptionsEntry *elems, int32_t n);
int32_t ak_elemu_TaskSummary(ak_enc_ctx *ctx, const struct ak_efix_TaskSummary *elems, int32_t n, int64_t tok0);
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);
/* 1 once ak_init has returned successfully. */
int32_t ak_initialized(void);
/* A NUL-terminated build id. */
const char *ak_build_id(void);
/* Test hook: one line through the installed log bridge. */
int32_t ak_log_test(uint32_t level, const uint8_t *msg, size_t len);
/* Test hook: a panic inside the core. */
void ak_panic_test(void);
/* context */
uint32_t ak_abi_version(void);
ak_enc_ctx *ak_enc_ctx_new(void);
void ak_enc_ctx_free(ak_enc_ctx *ctx);
/* Clears the buffer and the sticky slot. */
void ak_enc_reset(ak_enc_ctx *ctx);
/* Borrow what the context has encoded, valid until the next reset; returns the status. */
int32_t ak_enc_take(ak_enc_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_dec_ctx_free(ak_dec_ctx *ctx);
/* error */
/* Sticky, first error wins; takes either context (ABI v1 section 5). */
void ak_fail(void *ctx, int32_t code, const uint8_t *msg, uint32_t msg_len);
int32_t ak_enc_err(const ak_enc_ctx *ctx);
int32_t ak_dec_err(const ak_dec_ctx *ctx);
void ak_dec_err_reset(ak_dec_ctx *ctx);
/* transcode */
/* UTF-8, validate and refuse. */
ak_transcode_fn ak_tc_utf8(void);
/* UTF-8, no validation. */
ak_transcode_fn ak_tc_utf8_trusted(void);
/* UTF-8, SIMD validator. */
ak_transcode_fn ak_tc_utf8_simd(void);
/* bytes: a copy. */
ak_transcode_fn ak_tc_bytes(void);
/* UTF-16 code units -> UTF-8. */
ak_transcode_fn ak_tc_utf16(void);
/* Latin-1 bytes -> UTF-8. */
ak_transcode_fn ak_tc_latin1(void);
/* counters */
void ak_enc_counters(const ak_enc_ctx *ctx, struct AkCounters *out);
/* Counting build: the HOST reports a reverse crossing the core cannot see. */
void ak_enc_count_reverse(ak_enc_ctx *ctx);
void ak_enc_counters_reset(ak_enc_ctx *ctx);
void ak_dec_counters(const ak_dec_ctx *ctx, struct AkCounters *out);
void ak_dec_counters_reset(ak_dec_ctx *ctx);
size_t ak_enc_site_moves(const ak_enc_ctx *ctx, uint32_t *out, size_t cap);
/* noop */
/* A crossing and nothing else. */
uint64_t ak_noop(uint64_t x);
/* An identical twin of ak_noop. */
uint64_t ak_noop2(uint64_t x);
/* ak_noop with the init guard. */
uint64_t ak_noop_guarded(uint64_t x);
/* One forward and one reverse crossing. */
uint64_t ak_noop_reverse(uint64_t (*f)(uint64_t), uint64_t x);
/* pull */
int32_t ak_bdr_reserve(ak_dec_ctx *ctx, size_t bytes);
size_t ak_bdr_footprint(const ak_dec_ctx *ctx);
intptr_t ak_bdr_drain(ak_dec_ctx *ctx, uint8_t *dst, size_t cap, size_t *cursor);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_bdr_reset(ak_dec_ctx *ctx);
/* Counting build: the host reports the forward crossings of a drain loop. */
void ak_bdr_count_forward(ak_dec_ctx *ctx, uint32_t n);