ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

    internal static int ak_elemu_TaskDetailed(IntPtr ctx, ak_efix_TaskDetailed* elems, int n, long tok0) { System.Threading.Interlocked.Increment(ref N_ak_elemu_TaskDetailed); return ak_elemu_TaskDetailed__raw(ctx, elems, n, tok0); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elemu_TaskDetailed(IntPtr ctx, ak_efix_TaskDetailed* elems, int n, long tok0);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elemu_TaskDetailed(IntPtr ctx, ak_efix_TaskDetailed* elems, int n, long tok0);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elem_TaskOptionsOptionsEntry", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elem_TaskOptionsOptionsEntry__raw(IntPtr ctx, ak_efix_TaskOptionsOptionsEntry* elems, int n);
    internal static long N_ak_elem_TaskOptionsOptionsEntry;
    internal static int ak_elem_TaskOptionsOptionsEntry(IntPtr ctx, ak_efix_TaskOptionsOptionsEntry* elems, int n) { System.Threading.Interlocked.Increment(ref N_ak_elem_TaskOptionsOptionsEntry); return ak_elem_TaskOptionsOptionsEntry__raw(ctx, elems, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elem_TaskOptionsOptionsEntry(IntPtr ctx, ak_efix_TaskOptionsOptionsEntry* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elem_TaskOptionsOptionsEntry(IntPtr ctx, ak_efix_TaskOptionsOptionsEntry* elems, int n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elemu_TaskSummary", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elemu_TaskSummary__raw(IntPtr ctx, ak_efix_TaskSummary* elems, int n, long tok0);
    internal static long N_ak_elemu_TaskSummary;
    internal static int ak_elemu_TaskSummary(IntPtr ctx, ak_efix_TaskSummary* elems, int n, long tok0) { System.Threading.Interlocked.Increment(ref N_ak_elemu_TaskSummary); return ak_elemu_TaskSummary__raw(ctx, elems, n, tok0); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elemu_TaskSummary(IntPtr ctx, ak_efix_TaskSummary* elems, int n, long tok0);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elemu_TaskSummary(IntPtr ctx, ak_efix_TaskSummary* elems, int n, long tok0);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_ListResultsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_ListResultsResponse__raw();
    internal static long N_ak_dec_ctx_new_ListResultsResponse;
    internal static IntPtr ak_dec_ctx_new_ListResultsResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_ListResultsResponse); return ak_dec_ctx_new_ListResultsResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_ListResultsResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_ListResultsResponse();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_ListTasksDetailedResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_ListTasksDetailedResponse__raw();
    internal static long N_ak_dec_ctx_new_ListTasksDetailedResponse;
    internal static IntPtr ak_dec_ctx_new_ListTasksDetailedResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_ListTasksDetailedResponse); return ak_dec_ctx_new_ListTasksDetailedResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_ListTasksDetailedResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_ListTasksDetailedResponse();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_ListProbeResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_ListProbeResponse__raw();
    internal static long N_ak_dec_ctx_new_ListProbeResponse;
    internal static IntPtr ak_dec_ctx_new_ListProbeResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_ListProbeResponse); return ak_dec_ctx_new_ListProbeResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_ListProbeResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_ListProbeResponse();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_ListTaskSummaryResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_ListTaskSummaryResponse__raw();
    internal static long N_ak_dec_ctx_new_ListTaskSummaryResponse;
    internal static IntPtr ak_dec_ctx_new_ListTaskSummaryResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_ListTaskSummaryResponse); return ak_dec_ctx_new_ListTaskSummaryResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_ListTaskSummaryResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_ListTaskSummaryResponse();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_UploadResultDataMessage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_UploadResultDataMessage__raw();
    internal static long N_ak_dec_ctx_new_UploadResultDataMessage;
    internal static IntPtr ak_dec_ctx_new_UploadResultDataMessage() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_UploadResultDataMessage); return ak_dec_ctx_new_UploadResultDataMessage__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_UploadResultDataMessage();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_UploadResultDataMessage();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_ListMetricsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_ListMetricsResponse__raw();
    internal static long N_ak_dec_ctx_new_ListMetricsResponse;
    internal static IntPtr ak_dec_ctx_new_ListMetricsResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_ListMetricsResponse); return ak_dec_ctx_new_ListMetricsResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_ListMetricsResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_ListMetricsResponse();
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_dec_ctx_new_DualResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern IntPtr ak_dec_ctx_new_DualResponse__raw();
    internal static long N_ak_dec_ctx_new_DualResponse;
    internal static IntPtr ak_dec_ctx_new_DualResponse() { System.Threading.Interlocked.Increment(ref N_ak_dec_ctx_new_DualResponse); return ak_dec_ctx_new_DualResponse__raw(); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_dec_ctx_new_DualResponse();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_dec_ctx_new_DualResponse();
#endif
#if AK_HOST_COUNT
    /// CAMPAIGN req 19: every entry point called since the last EntryReset, by name.
    public static System.Collections.Generic.List<(string Name, long Calls)> EntryCounts()
    {
        var l = new System.Collections.Generic.List<(string, long)>();
        if (N_ak_init != 0) l.Add(("ak_init", N_ak_init));
        if (N_ak_initialized != 0) l.Add(("ak_initialized", N_ak_initialized));
        if (N_ak_build_id != 0) l.Add(("ak_build_id", N_ak_build_id));
        if (N_ak_log_test != 0) l.Add(("ak_log_test", N_ak_log_test));
        if (N_ak_panic_test != 0) l.Add(("ak_panic_test", N_ak_panic_test));
        if (N_ak_abi_version != 0) l.Add(("ak_abi_version", N_ak_abi_version));
        if (N_ak_enc_ctx_new != 0) l.Add(("ak_enc_ctx_new", N_ak_enc_ctx_new));
        if (N_ak_enc_ctx_free != 0) l.Add(("ak_enc_ctx_free", N_ak_enc_ctx_free));
        if (N_ak_enc_reset != 0) l.Add(("ak_enc_reset", N_ak_enc_reset));
        if (N_ak_enc_take != 0) l.Add(("ak_enc_take", N_ak_enc_take));
        if (N_ak_dec_ctx_free != 0) l.Add(("ak_dec_ctx_free", N_ak_dec_ctx_free));
        if (N_ak_fail != 0) l.Add(("ak_fail", N_ak_fail));
        if (N_ak_enc_err != 0) l.Add(("ak_enc_err", N_ak_enc_err));
        if (N_ak_dec_err != 0) l.Add(("ak_dec_err", N_ak_dec_err));
        if (N_ak_dec_err_reset != 0) l.Add(("ak_dec_err_reset", N_ak_dec_err_reset));
        if (N_ak_tc_utf8 != 0) l.Add(("ak_tc_utf8", N_ak_tc_utf8));
        if (N_ak_tc_utf8_trusted != 0) l.Add(("ak_tc_utf8_trusted", N_ak_tc_utf8_trusted));
        if (N_ak_tc_utf8_simd != 0) l.Add(("ak_tc_utf8_simd", N_ak_tc_utf8_simd));
        if (N_ak_tc_bytes != 0) l.Add(("ak_tc_bytes", N_ak_tc_bytes));
        if (N_ak_tc_utf16 != 0) l.Add(("ak_tc_utf16", N_ak_tc_utf16));
        if (N_ak_tc_latin1 != 0) l.Add(("ak_tc_latin1", N_ak_tc_latin1));
        if (N_ak_enc_counters != 0) l.Add(("ak_enc_counters", N_ak_enc_counters));
        if (N_ak_enc_count_reverse != 0) l.Add(("ak_enc_count_reverse", N_ak_enc_count_reverse));
        if (N_ak_enc_counters_reset != 0) l.Add(("ak_enc_counters_reset", N_ak_enc_counters_reset));
        if (N_ak_dec_counters != 0) l.Add(("ak_dec_counters", N_ak_dec_counters));
        if (N_ak_dec_counters_reset != 0) l.Add(("ak_dec_counters_reset", N_ak_dec_counters_reset));
        if (N_ak_enc_site_moves != 0) l.Add(("ak_enc_site_moves", N_ak_enc_site_moves));
        if (N_ak_noop != 0) l.Add(("ak_noop", N_ak_noop));
        if (N_ak_noop2 != 0) l.Add(("ak_noop2", N_ak_noop2));
        if (N_ak_noop_guarded != 0) l.Add(("ak_noop_guarded", N_ak_noop_guarded));
        if (N_ak_noop_reverse != 0) l.Add(("ak_noop_reverse", N_ak_noop_reverse));
        if (N_ak_bdr_reserve != 0) l.Add(("ak_bdr_reserve", N_ak_bdr_reserve));
        if (N_ak_bdr_footprint != 0) l.Add(("ak_bdr_footprint", N_ak_bdr_footprint));
        if (N_ak_bdr_drain != 0) l.Add(("ak_bdr_drain", N_ak_bdr_drain));
        if (N_ak_bdr_ptr != 0) l.Add(("ak_bdr_ptr", N_ak_bdr_ptr));
        if (N_ak_bdr_reset != 0) l.Add(("ak_bdr_reset", N_ak_bdr_reset));
        if (N_ak_bdr_count_forward != 0) l.Add(("ak_bdr_count_forward", N_ak_bdr_count_forward));
